Added all needed elements and button functionality!

--- a/quiz.html
+++ b/quiz.html
@@ -12,8 +12,11 @@
 <body>
     <header></header>
     <main class="main">
-        <div>
+        <div id="quiz">
             <h1>Quiz goes here</h1>
+            <form action="complete.html">
+                <input type="submit" value="Submit" name="Submit">
+            </form>
         </div>
     </main>
     <footer>
