--- a/complete.html
+++ b/complete.html
@@ -13,10 +13,10 @@
     <header></header>
     <main class="main">
         <div>
-            <h1>SkyVerse Music Quiz</h1>
-            <h3>Welcome! To get started, click the button below!</h3>
-            <form action="quiz.html">
-                <input type="submit" value="Start" name="Start">
+            <h1>Thank You!</h1>
+            <h3>Click the button below to return to the home page!</h3>
+            <form action="index.html">
+                <input type="submit" value="Home" name="Home">
             </form>
             <h5>For more projects, visit <a href="https://www.sylkylacole.com/#projects-section">here</a>!</h5>
         </div>
