Got some basic placeholder questions up; COME UP WITH 5 QUESTIONS

--- a/quiz.html
+++ b/quiz.html
@@ -13,8 +13,32 @@
     <header></header>
     <main class="main">
         <div id="quiz">
-            <h1>Quiz goes here</h1>
-            <form action="complete.html">
+            <h1>SkyVerse Music Quiz</h1>
+            <form action="complete.html" method="get">
+                <label for="q1">Are you a fan of boy groups of girl groups?</label><br>
+                <input type="radio" name="q1" id="q1" >
+                <label for="q1">Boy Groups</label><br>
+                <input type="radio" name="q1" id="q1-radio" >
+                <label for="q1">Girl Groups</label><br><br>
+                
+                <label for="q2">Pick a vibe</label><br>
+                <input type="radio" name="q2" id="q2-radio">
+                <label for="q2">R&B</label><br>
+                <input type="radio" name="q2" id="q2-radio">
+                <label for="q2">Mellow</label><br>
+                <input type="radio" name="q2" id="q2-radio">
+                <label for="q2">Bubbly</label><br>
+                <input type="radio" name="q2" id="q2-radio">
+                <label for="q2">Genre change</label><br><br>
+
+                <label for="q3">What do you look for in music?</label><br>
+                <input type="radio" name="q3" id="q3-radio">
+                <label for="q3">Lyrics</label><br>
+                <input type="radio" name="q3" id="q3-radio">
+                <label for="q3">Instrumental</label><br><br>
+
+
+
                 <input type="submit" value="Submit" name="Submit">
             </form>
         </div>
