Edited the contents to reflect the color quiz + added text; need to add images tomorrow

--- a/quiz.html
+++ b/quiz.html
@@ -13,33 +13,117 @@
     <header></header>
     <main class="main">
         <div id="quiz">
-            <h1>SkyVerse Music Quiz</h1>
+            <h1>SkyVerse Color Quiz</h1>
             <form action="complete.html" method="get">
-                <label for="q1">Are you a fan of boy groups of girl groups?</label><br>
-                <input type="radio" name="q1" id="q1" >
-                <label for="q1">Boy Groups</label><br>
-                <input type="radio" name="q1" id="q1-radio" >
-                <label for="q1">Girl Groups</label><br><br>
+                <label for="q1">1. Pick an aesthetic</label><br>
+                <input type="radio" name="q1" id="q1.1">
+                <label for="q1">Dark Acadmeia</label><br>
+                <input type="radio" name="q1" id="q1.2">
+                <label for="q1">Coquette</label><br>
+                <input type="radio" name="q1" id="q1.3">
+                <label for="q1">Grunge</label><br>
+                <input type="radio" name="q1" id="q1.4">
+                <label for="q1">Indie</label><br><br>
                 
-                <label for="q2">Pick a vibe</label><br>
+                <label for="q2">2. Pick a game I play</label><br>
                 <input type="radio" name="q2" id="q2-radio">
-                <label for="q2">R&B</label><br>
+                <label for="q2">Animal Crossing</label><br>
                 <input type="radio" name="q2" id="q2-radio">
-                <label for="q2">Mellow</label><br>
+                <label for="q2">Warframe</label><br>
                 <input type="radio" name="q2" id="q2-radio">
-                <label for="q2">Bubbly</label><br>
+                <label for="q2">Stardew Valley</label><br>
                 <input type="radio" name="q2" id="q2-radio">
-                <label for="q2">Genre change</label><br><br>
+                <label for="q2">Genshin Impact</label><br><br>
 
-                <label for="q3">What do you look for in music?</label><br>
+                <label for="q3">3. Pick a friend of mine you'd want to be friends with based on descriptions</label><br>
                 <input type="radio" name="q3" id="q3-radio">
-                <label for="q3">Lyrics</label><br>
+                <label for="q3">Josh</label><br>
                 <input type="radio" name="q3" id="q3-radio">
-                <label for="q3">Instrumental</label><br><br>
+                <label for="q3">Felicity</label><br>
+                <input type="radio" name="q3" id="q3-radio">
+                <label for="q3">Danny</label><br>
+                <input type="radio" name="q3" id="q3-radio">
+                <label for="q3">Sky (me!)</label><br><br>
 
 
+                <label for="q4">4. Pick a hobby</label><br>
+                <input type="radio" name="q4" id="q4-radio" class="radio">
+                <label for="q4">Reading</label><br>
+                <input type="radio" name="q4" id="q4-radio" class="radio">
+                <label for="q4">Skateboarding</label><br>
+                <input type="radio" name="q4" id="q4-radio" class="radio">
+                <label for="q4">Nature walks</label><br>
+                <input type="radio" name="q4" id="q4-radio" class="radio">
+                <label for="q4">Baking</label><br><br>
 
-                <input type="submit" value="Submit" name="Submit">
+
+                <label for="q5">5. Pick an outfit</label><br>
+                <input type="radio" name="q5" id="q5-radio" class="radio">
+                <label for="q5">Option A</label><br>
+                <input type="radio" name="q5" id="q5-radio" class="radio">
+                <label for="q5">Option B</label><br>
+                <input type="radio" name="q5" id="q5-radio" class="radio">
+                <label for="q5">Option C</label><br>
+                <input type="radio" name="q5" id="q5-radio" class="radio">
+                <label for="q5">Option D</label><br><br>
+
+
+                <label for="q6">6. What is your "third place"</label><br> <!-- Include something here that explains what this is-->
+                <input type="radio" name="q6" id="q6-radio" class="radio">
+                <label for="q6">Library</label><br>
+                <input type="radio" name="q6" id="q6-radio" class="radio">
+                <label for="q6">Mall</label><br>
+                <input type="radio" name="q6" id="q6-radio" class="radio">
+                <label for="q6">Skate park</label><br>
+                <input type="radio" name="q6" id="q6-radio" class="radio">
+                <label for="q6">Anywhere outdoors</label><br><br>
+
+
+                <label for="q7">7. Pick a character whom I adore</label><br>
+                <input type="radio" name="q7" id="q7-radio" class="radio">
+                <label for="q7">Option A</label><br>
+                <input type="radio" name="q7" id="q7-radio" class="radio">
+                <label for="q7">Option B</label><br>
+                <input type="radio" name="q7" id="q7-radio" class="radio">
+                <label for="q7">Option C</label><br>
+                <input type="radio" name="q7" id="q7-radio" class="radio">
+                <label for="q7">Option D</label><br><br>
+
+
+                <label for="q8">8. Pick a non-fiction book you'd read</label><br>
+                <input type="radio" name="q8" id="q8-radio" class="radio">
+                <label for="q8">Option A</label><br>
+                <input type="radio" name="q8" id="q8-radio" class="radio">
+                <label for="q8">Option B</label><br>
+                <input type="radio" name="q8" id="q8-radio" class="radio">
+                <label for="q8">Option C</label><br>
+                <input type="radio" name="q8" id="q8-radio" class="radio">
+                <label for="q8">Option D</label><br><br>
+
+
+                <label for="q9">9. Pick a cat :3</label><br>
+                <input type="radio" name="q9" id="q9-radio" class="radio">
+                <label for="q9">Option A</label><br>
+                <input type="radio" name="q9" id="q9-radio" class="radio">
+                <label for="q9">Option B</label><br>
+                <input type="radio" name="q9" id="q9-radio" class="radio">
+                <label for="q9">Option C</label><br>
+                <input type="radio" name="q9" id="q9-radio" class="radio">
+                <label for="q9">Option D</label><br><br>
+
+
+                <label for="q10">10. What is your favorite color?</label><br>
+                <input type="radio" name="q10" id="q10-radio" class="radio">
+                <label for="q3">Option A</label><br>
+                <input type="radio" name="q10" id="q10-radio" class="radio">
+                <label for="q3">Option B</label><br>
+                <input type="radio" name="q10" id="q10-radio" class="radio">
+                <label for="q3">Option C</label><br>
+                <input type="radio" name="q10" id="q10-radio" class="radio">
+                <label for="q3">Option D</label><br><br>
+
+
+                <input type="submit" value="Submit" name="Submit" id="submit">
             </form>
         </div>
     </main>
