--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header></header>
     <main class="main">
         <div>
-            <h1>SkyVerse Music Quiz</h1>
+            <h1>SkyVerse Color Quiz</h1>
             <h3>Welcome! To get started, click the button below!</h3>
             <form action="quiz.html">
                 <input type="submit" value="Start" name="Start">
