--- a/quiz.html
+++ b/quiz.html
@@ -37,13 +37,13 @@
 
                 <label for="q3">3. Pick a friend of mine you'd want to be friends with based on descriptions</label><br>
                 <input type="radio" name="q3" id="q3-radio">
-                <label for="q3">Josh</label><br>
+                <label for="q3">Josh: silly goofy goober who says VERY out of pocket things sometimes, but is an amazing dude overall who is always there for his pals</label><br>
                 <input type="radio" name="q3" id="q3-radio">
-                <label for="q3">Felicity</label><br>
+                <label for="q3">Felicity: THE bestie of besties who loves to read, watch movies, and occasionally gets a little too goofy; is learning Korean for unknown reasons</label><br>
                 <input type="radio" name="q3" id="q3-radio">
-                <label for="q3">Danny</label><br>
+                <label for="q3">Danny: very self aware and loves to talk about the political and economic state of the world (joke); gets philosophical very often and is fun to talk to; hates country accents/j</label><br>
                 <input type="radio" name="q3" id="q3-radio">
-                <label for="q3">Sky (me!)</label><br><br>
+                <label for="q3">Sky (me!): loves all things pink and tailors everything around her to fit her personality; indulges in EVERYTHING and gets along with many people; addicted to Genshin Impact</label><br><br>
 
 
                 <label for="q4">4. Pick a hobby</label><br>
