Added all images; next week we'll focus on styling in css

--- a/quiz.html
+++ b/quiz.html
@@ -59,13 +59,13 @@
 
                 <label for="q5">5. Pick an outfit</label><br>
                 <input type="radio" name="q5" id="q5-radio" class="radio">
-                <label for="q5">Option A</label><br>
+                <img src="images/cfit.jpg" alt="fit_1" class="quiz_image"><br>
                 <input type="radio" name="q5" id="q5-radio" class="radio">
-                <label for="q5">Option B</label><br>
+                <img src="images/dafit.jpg" alt="fit_2" class="quiz_image"><br>
                 <input type="radio" name="q5" id="q5-radio" class="radio">
-                <label for="q5">Option C</label><br>
+                <img src="images/efit.jpg" alt="fit_3" class="quiz_image"><br>
                 <input type="radio" name="q5" id="q5-radio" class="radio">
-                <label for="q5">Option D</label><br><br>
+                <img src="images/ifit.jpg" alt="fit_4" class="quiz_image"><br><br>
 
 
                 <label for="q6">6. What is your "third place"</label><br> <!-- Include something here that explains what this is-->
@@ -81,47 +81,37 @@
 
                 <label for="q7">7. Pick a character whom I adore</label><br>
                 <input type="radio" name="q7" id="q7-radio" class="radio">
-                <label for="q7">Option A</label><br>
+                <img src="images/marin.jpg" alt="marin" class="quiz_image"><br>
                 <input type="radio" name="q7" id="q7-radio" class="radio">
-                <label for="q7">Option B</label><br>
+                <img src="images/ranpo.jpg" alt="ranpo" class="quiz_image"><br>
                 <input type="radio" name="q7" id="q7-radio" class="radio">
-                <label for="q7">Option C</label><br>
+                <img src="images/saiki.jpg" alt="saiki" class="quiz_image"><br>
                 <input type="radio" name="q7" id="q7-radio" class="radio">
-                <label for="q7">Option D</label><br><br>
+                <img src="images/senku.jpg" alt="senku" class="quiz_image"><br><br>
 
 
-                <label for="q8">8. Pick a non-fiction book you'd read</label><br>
+                <label for="q8">8. Pick a non-fiction book you'd read based on the title</label><br>
                 <input type="radio" name="q8" id="q8-radio" class="radio">
-                <label for="q8">Option A</label><br>
+                <label for="q8">The Art of War</label><br>
                 <input type="radio" name="q8" id="q8-radio" class="radio">
-                <label for="q8">Option B</label><br>
+                <label for="q8">Guide to Ettiquite</label><br>
                 <input type="radio" name="q8" id="q8-radio" class="radio">
-                <label for="q8">Option C</label><br>
-                <input type="radio" name="q8" id="q8-radio" class="radio">
-                <label for="q8">Option D</label><br><br>
+                <label for="q8">Trees in Nature</label><br><br>
 
 
                 <label for="q9">9. Pick a cat :3</label><br>
                 <input type="radio" name="q9" id="q9-radio" class="radio">
-                <label for="q9">Option A</label><br>
+                <img src="images/cute_cat.jpg" alt="cute_cat" class="quiz_image"><br>
                 <input type="radio" name="q9" id="q9-radio" class="radio">
-                <label for="q9">Option B</label><br>
+                <img src="images/punk_cat.jpg" alt="punk_cat" class="quiz_image"><br>
                 <input type="radio" name="q9" id="q9-radio" class="radio">
-                <label for="q9">Option C</label><br>
+                <img src="images/frog_cat.jpg" alt="frog_cat" class="quiz_image"><br>
                 <input type="radio" name="q9" id="q9-radio" class="radio">
-                <label for="q9">Option D</label><br><br>
+                <img src="images/book_cat.jpg" alt="book_cat" class="quiz_image"><br><br>
 
 
                 <label for="q10">10. What is your favorite color?</label><br>
-                <input type="radio" name="q10" id="q10-radio" class="radio">
-                <label for="q3">Option A</label><br>
-                <input type="radio" name="q10" id="q10-radio" class="radio">
-                <label for="q3">Option B</label><br>
-                <input type="radio" name="q10" id="q10-radio" class="radio">
-                <label for="q3">Option C</label><br>
-                <input type="radio" name="q10" id="q10-radio" class="radio">
-                <label for="q3">Option D</label><br><br>
-
+                <input type="text" name="q10" id="q10-radio" class="radio"><br><br>
 
                 <input type="submit" value="Submit" name="Submit" id="submit">
             </form>
