Added styling to index and complete page! Work on quiz.html tomorrow!

--- a/complete.html
+++ b/complete.html
@@ -16,7 +16,7 @@
             <h1>Thank You!</h1>
             <h3>Click the button below to return to the home page!</h3>
             <form action="index.html">
-                <input type="submit" value="Home" name="Home">
+                <input type="submit" value="Home" name="Home" id="home-button">
             </form>
             <h5>For more projects, visit <a href="https://www.sylkylacole.com/#projects-section">here</a>!</h5>
         </div>
