--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>SkyVerse Color Quiz</h1>
             <h3>Welcome! To get started, click the button below!</h3>
             <form action="quiz.html">
-                <input type="submit" value="Start" name="Start">
+                <input type="submit" value="Start" name="Start" id="start-button">
             </form>
             <h5>For more projects, visit <a href="https://www.sylkylacole.com/#projects-section">here</a>!</h5>
         </div>
