Rough styling done! Tomorrow is JS :")

--- a/quiz.html
+++ b/quiz.html
@@ -15,103 +15,123 @@
         <div id="quiz">
             <h1>SkyVerse Color Quiz</h1>
             <form action="complete.html" method="get">
-                <label for="q1">1. Pick an aesthetic</label><br>
-                <input type="radio" name="q1" id="q1.1">
-                <label for="q1">Dark Acadmeia</label><br>
-                <input type="radio" name="q1" id="q1.2">
-                <label for="q1">Coquette</label><br>
-                <input type="radio" name="q1" id="q1.3">
-                <label for="q1">Grunge</label><br>
-                <input type="radio" name="q1" id="q1.4">
-                <label for="q1">Indie</label><br><br>
+                <div class="wrapper">
+                    <label for="q1">1. Pick an aesthetic</label><br>
+                    <input type="radio" name="q1" id="q1.1">
+                    <label for="q1">Dark Acadmeia</label><br>
+                    <input type="radio" name="q1" id="q1.2">
+                    <label for="q1">Coquette</label><br>
+                    <input type="radio" name="q1" id="q1.3">
+                    <label for="q1">Grunge</label><br>
+                    <input type="radio" name="q1" id="q1.4">
+                    <label for="q1">Indie</label><br><br>
+                </div>  
                 
-                <label for="q2">2. Pick a game I play</label><br>
-                <input type="radio" name="q2" id="q2-radio">
-                <label for="q2">Animal Crossing</label><br>
-                <input type="radio" name="q2" id="q2-radio">
-                <label for="q2">Warframe</label><br>
-                <input type="radio" name="q2" id="q2-radio">
-                <label for="q2">Stardew Valley</label><br>
-                <input type="radio" name="q2" id="q2-radio">
-                <label for="q2">Genshin Impact</label><br><br>
+                <div class="wrapper">          
+                    <label for="q2">2. Pick a game I play</label><br>
+                    <input type="radio" name="q2" id="q2-radio">
+                    <label for="q2">Animal Crossing</label><br>
+                    <input type="radio" name="q2" id="q2-radio">
+                    <label for="q2">Warframe</label><br>
+                    <input type="radio" name="q2" id="q2-radio">
+                    <label for="q2">Stardew Valley</label><br>
+                    <input type="radio" name="q2" id="q2-radio">
+                    <label for="q2">Genshin Impact</label><br><br>
+                </div>
 
-                <label for="q3">3. Pick a friend of mine you'd want to be friends with based on descriptions</label><br>
-                <input type="radio" name="q3" id="q3-radio">
-                <label for="q3">Josh: silly goofy goober who says VERY out of pocket things sometimes, but is an amazing dude overall who is always there for his pals</label><br>
-                <input type="radio" name="q3" id="q3-radio">
-                <label for="q3">Felicity: THE bestie of besties who loves to read, watch movies, and occasionally gets a little too goofy; is learning Korean for unknown reasons</label><br>
-                <input type="radio" name="q3" id="q3-radio">
-                <label for="q3">Danny: very self aware and loves to talk about the political and economic state of the world (joke); gets philosophical very often and is fun to talk to; hates country accents/j</label><br>
-                <input type="radio" name="q3" id="q3-radio">
-                <label for="q3">Sky (me!): loves all things pink and tailors everything around her to fit her personality; indulges in EVERYTHING and gets along with many people; addicted to Genshin Impact</label><br><br>
-
-
-                <label for="q4">4. Pick a hobby</label><br>
-                <input type="radio" name="q4" id="q4-radio" class="radio">
-                <label for="q4">Reading</label><br>
-                <input type="radio" name="q4" id="q4-radio" class="radio">
-                <label for="q4">Skateboarding</label><br>
-                <input type="radio" name="q4" id="q4-radio" class="radio">
-                <label for="q4">Nature walks</label><br>
-                <input type="radio" name="q4" id="q4-radio" class="radio">
-                <label for="q4">Baking</label><br><br>
+                <div class="wrapper">
+                    <label for="q3">3. Pick a friend of mine you'd want to be friends with based on descriptions</label><br>
+                    <input type="radio" name="q3" id="q3-radio">
+                    <label for="q3">Josh: silly goofy goober who says VERY out of pocket things sometimes, but is an amazing dude overall who is always there for his pals</label><br>
+                    <input type="radio" name="q3" id="q3-radio">
+                    <label for="q3">Felicity: THE bestie of besties who loves to read, watch movies, and occasionally gets a little too goofy; is learning Korean for unknown reasons</label><br>
+                    <input type="radio" name="q3" id="q3-radio">
+                    <label for="q3">Danny: very self aware and loves to talk about the political and economic state of the world (joke); gets philosophical very often and is fun to talk to</label><br>
+                    <input type="radio" name="q3" id="q3-radio">
+                    <label for="q3">Sky (me!): loves all things pink and tailors everything around her to fit her personality; gets along with many people; addicted to Genshin Impact</label><br><br>
+                </div>
 
 
-                <label for="q5">5. Pick an outfit</label><br>
-                <input type="radio" name="q5" id="q5-radio" class="radio">
-                <img src="images/cfit.jpg" alt="fit_1" class="quiz_image"><br>
-                <input type="radio" name="q5" id="q5-radio" class="radio">
-                <img src="images/dafit.jpg" alt="fit_2" class="quiz_image"><br>
-                <input type="radio" name="q5" id="q5-radio" class="radio">
-                <img src="images/efit.jpg" alt="fit_3" class="quiz_image"><br>
-                <input type="radio" name="q5" id="q5-radio" class="radio">
-                <img src="images/ifit.jpg" alt="fit_4" class="quiz_image"><br><br>
+                <div class="wrapper">
+                    <label for="q4">4. Pick a hobby</label><br>
+                    <input type="radio" name="q4" id="q4-radio" class="radio">
+                    <label for="q4">Reading</label><br>
+                    <input type="radio" name="q4" id="q4-radio" class="radio">
+                    <label for="q4">Skateboarding</label><br>
+                    <input type="radio" name="q4" id="q4-radio" class="radio">
+                    <label for="q4">Nature walks</label><br>
+                    <input type="radio" name="q4" id="q4-radio" class="radio">
+                    <label for="q4">Baking</label><br><br>
+                </div>
 
 
-                <label for="q6">6. What is your "third place"</label><br> <!-- Include something here that explains what this is-->
-                <input type="radio" name="q6" id="q6-radio" class="radio">
-                <label for="q6">Library</label><br>
-                <input type="radio" name="q6" id="q6-radio" class="radio">
-                <label for="q6">Mall</label><br>
-                <input type="radio" name="q6" id="q6-radio" class="radio">
-                <label for="q6">Skate park</label><br>
-                <input type="radio" name="q6" id="q6-radio" class="radio">
-                <label for="q6">Anywhere outdoors</label><br><br>
+                <div class="wrapper">
+                    <label for="q5">5. Pick an outfit</label><br>
+                    <input type="radio" name="q5" id="q5-radio" class="radio">
+                    <img src="images/cfit.jpg" alt="fit_1" class="quiz_image"><br>
+                    <input type="radio" name="q5" id="q5-radio" class="radio">
+                    <img src="images/dafit.jpg" alt="fit_2" class="quiz_image"><br>
+                    <input type="radio" name="q5" id="q5-radio" class="radio">
+                    <img src="images/efit.jpg" alt="fit_3" class="quiz_image"><br>
+                    <input type="radio" name="q5" id="q5-radio" class="radio">
+                    <img src="images/ifit.jpg" alt="fit_4" class="quiz_image"><br><br>
+                </div>
 
 
-                <label for="q7">7. Pick a character whom I adore</label><br>
-                <input type="radio" name="q7" id="q7-radio" class="radio">
-                <img src="images/marin.jpg" alt="marin" class="quiz_image"><br>
-                <input type="radio" name="q7" id="q7-radio" class="radio">
-                <img src="images/ranpo.jpg" alt="ranpo" class="quiz_image"><br>
-                <input type="radio" name="q7" id="q7-radio" class="radio">
-                <img src="images/saiki.jpg" alt="saiki" class="quiz_image"><br>
-                <input type="radio" name="q7" id="q7-radio" class="radio">
-                <img src="images/senku.jpg" alt="senku" class="quiz_image"><br><br>
+                <div class="wrapper">
+                    <label for="q6">6. What is your "third place"</label><br> <!-- Include something here that explains what this is-->
+                    <input type="radio" name="q6" id="q6-radio" class="radio">
+                    <label for="q6">Library</label><br>
+                    <input type="radio" name="q6" id="q6-radio" class="radio">
+                    <label for="q6">Mall</label><br>
+                    <input type="radio" name="q6" id="q6-radio" class="radio">
+                    <label for="q6">Skate park</label><br>
+                    <input type="radio" name="q6" id="q6-radio" class="radio">
+                    <label for="q6">Anywhere outdoors</label><br><br>
+                </div>
 
 
-                <label for="q8">8. Pick a non-fiction book you'd read based on the title</label><br>
-                <input type="radio" name="q8" id="q8-radio" class="radio">
-                <label for="q8">The Art of War</label><br>
-                <input type="radio" name="q8" id="q8-radio" class="radio">
-                <label for="q8">Guide to Ettiquite</label><br>
-                <input type="radio" name="q8" id="q8-radio" class="radio">
-                <label for="q8">Trees in Nature</label><br><br>
+                <div class="wrapper">
+                    <label for="q7">7. Pick a character whom I adore</label><br>
+                    <input type="radio" name="q7" id="q7-radio" class="radio">
+                    <img src="images/marin.jpg" alt="marin" class="quiz_image"><br>
+                    <input type="radio" name="q7" id="q7-radio" class="radio">
+                    <img src="images/ranpo.jpg" alt="ranpo" class="quiz_image"><br>
+                    <input type="radio" name="q7" id="q7-radio" class="radio">
+                    <img src="images/saiki.jpg" alt="saiki" class="quiz_image"><br>
+                    <input type="radio" name="q7" id="q7-radio" class="radio">
+                    <img src="images/senku.jpg" alt="senku" class="quiz_image"><br><br>
+                </div>
 
 
-                <label for="q9">9. Pick a cat :3</label><br>
-                <input type="radio" name="q9" id="q9-radio" class="radio">
-                <img src="images/cute_cat.jpg" alt="cute_cat" class="quiz_image"><br>
-                <input type="radio" name="q9" id="q9-radio" class="radio">
-                <img src="images/punk_cat.jpg" alt="punk_cat" class="quiz_image"><br>
-                <input type="radio" name="q9" id="q9-radio" class="radio">
-                <img src="images/frog_cat.jpg" alt="frog_cat" class="quiz_image"><br>
-                <input type="radio" name="q9" id="q9-radio" class="radio">
-                <img src="images/book_cat.jpg" alt="book_cat" class="quiz_image"><br><br>
+                <div class="wrapper">
+                    <label for="q8">8. Pick a non-fiction book you'd read based on the title</label><br>
+                    <input type="radio" name="q8" id="q8-radio" class="radio">
+                    <label for="q8">The Art of War</label><br>
+                    <input type="radio" name="q8" id="q8-radio" class="radio">
+                    <label for="q8">Guide to Ettiquite</label><br>
+                    <input type="radio" name="q8" id="q8-radio" class="radio">
+                    <label for="q8">Trees in Nature</label><br><br>
+                </div>
 
 
-                <label for="q10">10. What is your favorite color?</label><br>
-                <input type="text" name="q10" id="q10-radio" class="radio"><br><br>
+                <div class="wrapper">
+                    <label for="q9">9. Pick a cat :3</label><br>
+                    <input type="radio" name="q9" id="q9-radio" class="radio">
+                    <img src="images/cute_cat.jpg" alt="cute_cat" class="quiz_image"><br>
+                    <input type="radio" name="q9" id="q9-radio" class="radio">
+                    <img src="images/punk_cat.jpg" alt="punk_cat" class="quiz_image"><br>
+                    <input type="radio" name="q9" id="q9-radio" class="radio">
+                    <img src="images/frog_cat.jpg" alt="frog_cat" class="quiz_image"><br>
+                    <input type="radio" name="q9" id="q9-radio" class="radio">
+                    <img src="images/book_cat.jpg" alt="book_cat" class="quiz_image"><br><br>
+                </div>
+
+
+                <div class="wrapper">
+                    <label for="q10">10. What is your favorite color?</label><br>
+                    <input type="text" name="q10" id="q10-radio" class="radio"><br><br>
+                </div>
 
                 <input type="submit" value="Submit" name="Submit" id="submit">
             </form>
