--- a/quiz.html
+++ b/quiz.html
@@ -14,7 +14,7 @@
     <main class="main">
         <div id="quiz">
             <h1>SkyVerse Color Quiz</h1>
-            <form action="complete.html" method="get">
+            <form action="script.js" method="get">
                 <div class="wrapper">
                     <label for="q1">1. Pick an aesthetic</label><br>
                     <input type="radio" name="q1" id="q1.1">
@@ -135,6 +135,9 @@
 
                 <input type="submit" value="Submit" name="Submit" id="submit">
             </form>
+        </div>
+        <div class="hidden" id="results">
+            <h3>You are {result}</h3>
         </div>
     </main>
     <footer>
