Not dealing with this today :")"

--- a/quiz.html
+++ b/quiz.html
@@ -14,7 +14,7 @@
     <main class="main">
         <div id="quiz">
             <h1>SkyVerse Color Quiz</h1>
-            <form action="script.js" method="get">
+            <form action="script.js" method="get" id="form">
                 <div class="wrapper">
                     <label for="q1">1. Pick an aesthetic</label><br>
                     <input type="radio" name="q1" id="q1.1">
