--- a/quiz.html
+++ b/quiz.html
@@ -7,14 +7,14 @@
 
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="">
-    <script src="script.js"></script>
+
 </head>
 <body>
     <header></header>
     <main class="main">
         <div id="quiz">
             <h1>SkyVerse Color Quiz</h1>
-            <form action="script.js" method="get" id="form">
+            <form method="get" id="quizForm" name="quizForm">
                 <div class="wrapper">
                     <label for="q1">1. Pick an aesthetic</label><br>
                     <input type="radio" name="q1" id="q1.1">
@@ -133,7 +133,7 @@
                     <input type="text" name="q10" id="q10-radio" class="radio"><br><br>
                 </div>
 
-                <input type="submit" value="Submit" name="Submit" id="submit">
+                <input type="submit" value="Submit" name="submitButton" id="submitButton">
             </form>
         </div>
         <div class="hidden" id="results">
@@ -143,5 +143,6 @@
     <footer>
         <h5>For more projects, visit <a href="https://www.sylkylacole.com/#projects-section">here</a>!</h5>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
