Attempt #3 (I think I lost count)

--- a/quiz.html
+++ b/quiz.html
@@ -133,7 +133,7 @@
                     <input type="text" name="q10" id="q10-radio" class="radio"><br><br>
                 </div>
 
-                <input type="submit" value="Submit" name="submitButton" id="submitButton">
+                <input type="submit" value="Submit" name="submitButton" id="submitButton" onclick="popup(); redirect()">
             </form>
         </div>
         <div class="hidden" id="results">
