I THINK THIS IS A WIN!!!

--- a/quiz.html
+++ b/quiz.html
@@ -133,7 +133,15 @@
                     <input type="text" name="q10" id="q10-radio" class="radio"><br><br>
                 </div>
 
-                <input type="submit" value="Submit" name="submitButton" id="submitButton" onclick="popup(); redirect()">
+                <input type="submit" value="Submit" name="submitButton" id="submitButton" onclick="return false;">
+                <!-- <script>
+                    function one(){
+                        console.log("one");
+                    }
+                    function two(){
+                        console.log("two");
+                    }
+                </script> -->
             </form>
         </div>
         <div class="hidden" id="results">
